--- a/src/app/jwtdecode/jwtdecode.component.html
+++ b/src/app/jwtdecode/jwtdecode.component.html
@@ -3,22 +3,29 @@
     <div class="card-header">
       Enter token below:
     </div>
-    <div contenteditable="plaintext-only" class="tokenBody">
+    <div id="jwtToken" #jwtToken contenteditable="plaintext-only" spellcheck="false" (keyup)="tokenChanged()" class="tokenBody">
     </div>
 
   </div>
 
   <ul class="nav nav-pills" id="jwtTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Decoded Token</a>
+      <a class="nav-link active" id="decoded-tab" data-toggle="tab" href="#decoded" role="tab" aria-controls="decoded" aria-selected="true">Decoded Token</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Claims</a>
+      <a class="nav-link" id="claims-tab" data-toggle="tab" href="#claims" role="tab" aria-controls="claims" aria-selected="false">Claims</a>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+    <div class="tab-pane fade show active" id="decoded" role="tabpanel" aria-labelledby="decoded-tab">
+
+      <span *ngIf="decodedData[0]" class="decoded header" style="white-space: pre-wrap;">{{decodedData[0]}}.</span>
+      <span *ngIf="decodedData[1]" class="decoded payload">{{decodedData[1]}}.</span>
+      <span class="decoded signature">[Signature]</span>
+
+
+    </div>
+    <div class="tab-pane fade" id="claims" role="tabpanel" aria-labelledby="claims-tab">...</div>
   </div>
 
 </div>
